--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
-	height: 80vh;
+	height: 60vh;
 	text-align: center;
 	font-family: lato,sans-serif;
 	overflow: hidden;
@@ -34,7 +34,7 @@ body::after{
 }
 
 .time {
-	margin: 20px 30px;
+	margin: 15px 25px;
 }
 
 h1 {
@@ -53,5 +53,10 @@ h1 {
 }
 body * {
 	z-index: 1;
+}
+
+h2 {
+	font-size: 65px;
+	letter-spacing: 4px;
 }
 
